@@ -6,7 +6,7 @@ build_requires: {}
 configure_requires:
   Module::Build: 0
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4, CPAN::Meta::Converter version 2.112150'
+generated_by: 'Module::Build version 0.4, CPAN::Meta::Converter version 2.120630'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -15,13 +15,13 @@ name: HTML-Template-Compiled
 provides:
   HTML::Template::Compiled:
     file: lib/HTML/Template/Compiled.pm
-    version: 0.97_004
+    version: 0.97_005
   HTML::Template::Compiled::Classic:
     file: lib/HTML/Template/Compiled/Classic.pm
     version: 0.06
   HTML::Template::Compiled::Compiler:
     file: lib/HTML/Template/Compiled/Compiler.pm
-    version: 0.19
+    version: 0.20
   HTML::Template::Compiled::Compiler::Classic:
     file: lib/HTML/Template/Compiled/Compiler/Classic.pm
     version: 0.05
@@ -30,29 +30,23 @@ provides:
     version: 0.01
   HTML::Template::Compiled::Expr:
     file: lib/HTML/Template/Compiled/Expr.pm
-    version: 0.05
+    version: 0.06
   HTML::Template::Compiled::Expression:
     file: lib/HTML/Template/Compiled/Expression.pm
-    version: 0.02
+    version: 0.03
   HTML::Template::Compiled::Expression::Conditional:
     file: lib/HTML/Template/Compiled/Expression.pm
     version: 0
   HTML::Template::Compiled::Expression::Defined:
     file: lib/HTML/Template/Compiled/Expression/Expressions.pm
     version: 0
-  HTML::Template::Compiled::Expression::Else:
-    file: lib/HTML/Template/Compiled/Expression.pm
-    version: 0
   HTML::Template::Compiled::Expression::Elsif:
     file: lib/HTML/Template/Compiled/Expression.pm
     version: 0
   HTML::Template::Compiled::Expression::Expressions:
     file: lib/HTML/Template/Compiled/Expression/Expressions.pm
-    version: 0.01
+    version: 0.02
   HTML::Template::Compiled::Expression::Function:
-    file: lib/HTML/Template/Compiled/Expression.pm
-    version: 0
-  HTML::Template::Compiled::Expression::If:
     file: lib/HTML/Template/Compiled/Expression.pm
     version: 0
   HTML::Template::Compiled::Expression::Literal:
@@ -61,14 +55,8 @@ provides:
   HTML::Template::Compiled::Expression::Method:
     file: lib/HTML/Template/Compiled/Expression.pm
     version: 0
-  HTML::Template::Compiled::Expression::String:
-    file: lib/HTML/Template/Compiled/Expression/Expressions.pm
-    version: 0
   HTML::Template::Compiled::Expression::Ternary:
     file: lib/HTML/Template/Compiled/Expression/Expressions.pm
-    version: 0
-  HTML::Template::Compiled::Expression::Unless:
-    file: lib/HTML/Template/Compiled/Expression.pm
     version: 0
   HTML::Template::Compiled::Filter:
     file: lib/HTML/Template/Compiled/Filter.pm
@@ -81,7 +69,7 @@ provides:
     version: 0.01
   HTML::Template::Compiled::Parser:
     file: lib/HTML/Template/Compiled/Parser.pm
-    version: 0.13
+    version: 0.14
   HTML::Template::Compiled::Plugin::DHTML:
     file: lib/HTML/Template/Compiled/Plugin/DHTML.pm
     version: 0.02
@@ -118,4 +106,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: https://github.com/perlpunk/HTML-Template-Compiled
-version: 0.97_004
+version: 0.97_005
